Add character overview filters

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                    <button class="control-btn" onclick="importAllData()">匯入資料</button>
                    <button class="control-btn" onclick="showClearDataConfirm()">清空資料</button>
                    <button class="control-btn" onclick="saveData(); showSaveNotification()">儲存</button>
+                   <button class="control-btn" onclick="goToHomePage()">角色總覽</button>
                    <div class="language-menu-container" style="position: relative; margin-left: 8px;">
     <button id="lang-toggle" onclick="toggleLanguageMenu()" 
             style="background: none; border: none; color: var(--text-color); cursor: pointer; padding: 8px; border-radius: 4px; display: flex; align-items: center; transition: all 0.2s ease;"
